# OSMO

./: .bazelrc  MODULE.bazel
.claude/skills/osmo-skill/: SKILL.md
.claude/skills/osmo-skill/agents/: workflow-expert.md
.github/workflows/: brev.yml  pr-checks.yaml  testbot-respond-approve.yaml
cookbook/reinforcement_learning/multi_gpu/: train_policy.yaml
cookbook/reinforcement_learning/multi_node/: train_policy.yaml
cookbook/synthetic_data_generation/isaac_sim/: README.md
deployments/brev/: BUILD  README.md  disk-fill-test.yaml  prompt.md  setup.sh  shellcheck_test.sh
deployments/charts/backend-operator/: README.md  values.yaml
deployments/charts/backend-operator/templates/: backend-network-policy.yaml
deployments/charts/router/: README.md  values.yaml
deployments/charts/router/templates/: _envoy-config-helpers.tpl  _sidecar-helpers.tpl  router-service.yaml
deployments/charts/service/: README.md  values.yaml
deployments/charts/service/templates/: _envoy-config.tpl  _sidecar-helpers.tpl  agent-service.yaml  api-service.yaml  gateway.yaml  logger-service.yaml  worker.yaml
deployments/charts/web-ui/: README.md  values.yaml
deployments/charts/web-ui/templates/: _envoy-config-helpers.tpl  _sidecar-helpers.tpl  ui.yaml
deployments/upgrades/: 6_0_to_6_2_upgrade.md
docs/user_guide/getting_started/install/: index.rst
skills/osmo-agent/: LICENSE  SKILL.md
skills/osmo-agent/agents/: logs-reader.md  workflow-expert.md
skills/osmo-agent/references/: cookbook.md  workflow-patterns.md
src/: go.mod  go.sum  locked_requirements.txt  requirements.txt
src/cli/: BUILD  cli_builder.py  login.py  workflow.py
src/cli/packaging/: BUILD  uninstall.sh
src/cli/packaging/macos/: postinstall
src/lib/rsync/: rsync.py
src/lib/utils/: BUILD  client.py  common.py  login.py
src/operator/: backend_listener.py
src/operator/backend_test_runner/: daemonset_manager.py
src/operator/tests/: test_pod_status_calculator.py
src/operator/utils/: login.py
src/operator/utils/node_validation_test/: connection_validator.py  test_base.py
src/runtime/cmd/ctrl/: ctrl.go
src/runtime/pkg/args/: ctrl_args.go
src/runtime/pkg/data/: data.go
src/service/core/: service.py
src/service/core/app/: app_service.py
src/service/core/auth/: auth_service.py  objects.py
src/service/core/config/: config_service.py
src/service/core/data/: data_service.py
src/service/core/profile/: profile_service.py
src/service/core/tests/: BUILD  fixture.py  test_group_templates.py
src/service/core/workflow/: helpers.py  objects.py  workflow_service.py
src/service/core/workflow/tests/: test_calculate_pool_quotas.py  test_workflow_service.py
src/service/worker/: worker.py
src/ui/: openapi.json  orval.config.ts  package.json  playwright.config.ts  tsconfig.json
src/ui/e2e/: global-setup.ts
src/ui/e2e/journeys/: navigation.spec.ts  pools.spec.ts  resources.spec.ts
src/ui/e2e/mocks/: generated-mocks.ts
src/ui/e2e/utils/: mock-setup.ts
src/ui/scripts/: start-dev.mjs  test-e2e.mjs
src/ui/src/app/: globals.css
src/ui/src/app/(dashboard)/occupancy/: occupancy-page-content.tsx  page.tsx
src/ui/src/components/: inline-progress.tsx
src/ui/src/components/chrome/: chrome.tsx  header.tsx  submit-workflow-overlay.tsx
src/ui/src/components/code-viewer/: code-viewer-theme.css
src/ui/src/components/data-table/: data-table.tsx  table-toolbar.tsx  virtual-table-body.tsx
src/ui/src/components/data-table/utils/: column-constants.ts
src/ui/src/components/event-viewer/: event-details-panel.tsx  event-viewer-container.tsx
src/ui/src/components/filter-bar/: filter-bar-dropdown.tsx
src/ui/src/components/shell/hooks/: use-shell.ts
src/ui/src/components/shell/lib/: shell-cache.ts
src/ui/src/components/submit-workflow/: source-picker.tsx  submit-workflow-config-panel.tsx  submit-workflow-content.tsx  submit-workflow-editor-panel.tsx  submit-workflow.css  use-submit-workflow-form.ts
src/ui/src/components/workflow/: collapsible-section.tsx  pool-picker.tsx  pool-select.tsx  pool-status-badge.tsx  priority-picker.tsx  use-pool-selection.ts
src/ui/src/features/datasets/detail/components/: dataset-detail-content.tsx  file-browser-control-strip.tsx  file-browser-table.tsx
src/ui/src/features/occupancy/components/: occupancy-column-defs.tsx  occupancy-data-table.tsx  occupancy-summary.tsx  occupancy-toolbar.tsx
src/ui/src/features/occupancy/hooks/: use-occupancy-data.ts
src/ui/src/features/occupancy/lib/: occupancy-columns.ts  occupancy-search-fields.ts
src/ui/src/features/occupancy/stores/: occupancy-table-store.ts
src/ui/src/features/occupancy/styles/: occupancy.css
src/ui/src/features/pools/components/: pool-gpu-summary.tsx  pools-page-content.tsx  pools-toolbar.tsx
src/ui/src/features/pools/components/table/: pool-column-defs.tsx  pools-data-table.tsx
src/ui/src/features/pools/hooks/: use-pools-data.ts  use-sorted-pools.ts
src/ui/src/features/pools/lib/: pool-columns.ts  pool-gpu-summary.ts
src/ui/src/features/pools/styles/: pools.css
src/ui/src/features/workflows/list/lib/: actions.ts
src/ui/src/lib/: date-range-utils.test.ts
src/ui/src/lib/api/: fetcher.ts  generated.ts  stream-error.ts
src/ui/src/lib/api/adapter/: BACKEND_TODOS.md  datasets.ts  hooks.ts  occupancy-shim.ts  occupancy.ts  resources-shim.ts  transforms.test.ts  transforms.ts  types.ts  workflows-shim.ts
src/ui/src/lib/api/adapter/events/: use-event-stream.ts
src/ui/src/lib/api/server/: pools.ts  resources.ts  workflows.ts
src/ui/src/lib/navigation/: config.test.ts  config.ts
src/ui/src/mocks/: factories.ts  handlers.ts  mock-workflows.ts
src/ui/src/mocks/generators/: bucket-generator.ts  dataset-generator.ts  event-generator.ts  resource-generator.ts  task-summary-generator.ts
src/ui/src/stores/: submit-workflow-store.ts
src/utils/connectors/: BUILD  __init__.py  postgres.py  redis.py
src/utils/job/: backend_jobs.py  jobs.py  jobs_base.py  task.py  workflow.py
src/utils/job/tests/: test_task_db.py
src/utils/roles/: action_registry.go  action_registry_test.go
(+10 files in other folders)
